@@ -895,6 +895,7 @@ INPUT_ENCODING         = UTF-8
 # *.ucf, *.qsf and *.ice.
 
 FILE_PATTERNS          = *.h \
+                         *.hh \
                          *.md
 
 # The RECURSIVE tag can be used to specify whether or not subdirectories should
