@@ -14,12 +14,12 @@ enum SRM_ATOMIC_CHANGE
     SRM_ATOMIC_CHANGE_CURSOR_VISIBILITY = 1 << 0,
     SRM_ATOMIC_CHANGE_CURSOR_POSITION   = 1 << 1,
     SRM_ATOMIC_CHANGE_CURSOR_BUFFER     = 1 << 2,
-    SRM_ATOMIC_CHANGE_GAMMA_LUT         = 1 << 3,
+    SRM_ATOMIC_CHANGE_GAMMA_LUT         = 1 << 3
 };
 
 Int8  srmRenderModeCommonMatchConfigToVisual(EGLDisplay egl_display, EGLint visual_id, EGLConfig *configs, int count);
 Int8  srmRenderModeCommonChooseEGLConfiguration(EGLDisplay egl_display, const EGLint *attribs, EGLint visual_id, EGLConfig *config_out);
-void  srmRenderModeCommonPageFlipHandler(int, unsigned int, unsigned int, unsigned int, void *data);
+void  srmRenderModeCommonPageFlipHandler(Int32 fd, UInt32 seq, UInt32 sec, UInt32 usec, void *data);
 UInt8 srmRenderModeCommonCreateCursor(SRMConnector *connector);
 void srmRenderModeCommonDestroyCursor(SRMConnector *connector);
 UInt8 srmRenderModeCommonWaitRepaintRequest(SRMConnector *connector);
