@@ -7,6 +7,7 @@ SRM (0.5.0-1)
   * Introduced srmConnectorSetBufferDamageBoxes() to set connector damage using Pixman-style boxes.
   * Introduced new functions for vsync control: srmConnectorHasVsyncControlSupport(), srmConnectorIsVsyncEnabled(), and srmConnectorEnableVsync().
     Note: This is currently only supported when using the legacy DRM API, for the atomic API, vsync is always enabled.
+  * Added srmConnectorGetPresentationClock() and srmConnectorGetPresentationTime() functions for querying presentation time information of framebuffers.
 
   # Security Improvements
 
